# NDE

./: .gitignore  AGENTS.md  README.md  STATUS.md  index.html  tsconfig.tsbuildinfo
Docs/: 00-visao-geral.md  01-conceito-experiencia.md  02-briefing-pipeline-dados.md  03-briefing-experiencia-3d.md  04-experiencia-consumo.md  05-dossie-curadoria.md  06-guia-estados-animacao.md  07-guia-parametros.md  ANALISE_TECNICA.md
acervo/: .env.example  .gitignore  README.md  acervo.config.yaml  pyproject.toml  taxonomy.yaml
acervo/notes/: exp_cluster46.py  exp_embeddings.py  fichas-piloto.md
acervo/prompts/: extract_arc.md  extract_closed.md  extract_demographics.md  extract_open.md  name_clusters.md
acervo/src/acervo/: __init__.py  analyze.py  arc.py  cli.py  config.py  db.py  demographics.py  export.py  extract.py  group.py  people.py  review.py  schema.py  transcribe.py  ytdl.py
acervo/src/acervo/webui/: index.html
cables-export/: credits.txt  index.html  legal.txt
cables-export/assets/: 657b5f9f9076038e2b7aace8_char_normals.exr  657b5f9f9076038e2b7aace8_char_positions.exr  Base_Character_WalkCycle28f_Dying28f_normals.exr  Base_Character_WalkCycle28f_Dying28f_positions.exr
cables-export/js/: Crowd.json  cables.js  cgl.js  cgl_shadermodifier.js  ops.js
data/: fonte.json  nomes.json  youtube_video_ids.json
docs/: 03-briefing-experiencia-3d.md  ANALISE_TECNICA.md
limiar-experience/: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vercel.json
limiar-experience/docs/: 00-visao-geral.md  (+4 more)
scripts/: screenshot.mjs
src/: App.tsx
(+123 files in other folders)
